--- a/package.json
+++ b/package.json
@@ -20,13 +20,14 @@
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
     "@clr/angular": "^1.0.0",
+    "@clr/icons": "^1.0.0",
     "@clr/ui": "^1.0.0",
+    "@webcomponents/webcomponentsjs": "^2.0.0",
     "core-js": "^2.5.4",
     "rxjs": "~6.3.3",
+    "sweetalert2": "9.10.7",
     "tslib": "^1.9.0",
-    "zone.js": "~0.8.26",
-    "@clr/icons": "^1.0.0",
-    "@webcomponents/webcomponentsjs": "^2.0.0"
+    "zone.js": "~0.8.26"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.13.0",
