--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@webcomponents/webcomponentsjs": "^2.0.0",
     "core-js": "^2.5.4",
     "lodash": "^4.17.20",
+    "ngx-webcam": "^0.3.2",
     "rxjs": "~6.3.3",
     "sweetalert2": "9.10.7",
     "tslib": "^1.9.0",
