--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "@angular/compiler": "~9.1.13",
     "@angular/core": "~9.1.13",
     "@angular/forms": "~9.1.13",
+    "@angular/http": "^7.2.16",
     "@angular/platform-browser": "~9.1.13",
     "@angular/platform-browser-dynamic": "~9.1.13",
     "@angular/router": "~9.1.13",
+    "@auth0/angular-jwt": "^5.0.2",
     "@clr/angular": "^4.0.8",
     "@clr/core": "^4.0.8",
     "@clr/icons": "^4.0.8",
@@ -26,6 +28,7 @@
     "@webcomponents/webcomponentsjs": "^2.5.0",
     "core-js": "^2.5.4",
     "lodash": "^4.17.20",
+    "ngx-barcode": "^0.3.0",
     "ngx-webcam": "^0.3.2",
     "postinstall": "^0.7.0",
     "rxjs": "~6.6.3",
